Issue #300: Adding report forms

--- a/docs/GenderMag/GenderMag.tex
+++ b/docs/GenderMag/GenderMag.tex
@@ -66,15 +66,23 @@ The GenderMag method was applied to the following two use cases of the software 
 \end{enumerate}
 
 \section{Customized Personas}
+\subsection{Abi}
+Abi is designed to represent users with facet values often seen in females, such as comprehensive 
+information processing and higher risk aversion. For more details, see the full persona:
+\href{personas/abi.pdf}{View the Abi Persona PDF}.
+
+\subsection{Tim}
+Tim represents users with facet values commonly found among males, characterized by a selective 
+information processing style and a penchant for exploring new functionalities. For additional 
+details, see the full persona:
+\href{personas/tim.pdf}{View the Tim Persona PDF}.
+
+\section{Report Forms}
+\subsection{Use Case 1 Reports}
 
 
 
-\section{Reporting Forms}
-\subsection{Subgoal Reporting Forms}
-
-
-
-\subsection{Action Reporting Forms}
+\subsection{Use Case 2 Reports}
 
 
 
