Issue #300: Adding group reflection answers to appendix

--- a/docs/GenderMag/GenderMag.tex
+++ b/docs/GenderMag/GenderMag.tex
@@ -180,4 +180,18 @@ affect user inclusion.
 \begin{enumerate}
   \item What lessons did you learn from the GenderMag process that you will carry forward to your Software Engineering career?”
 \end{enumerate}
+
+Ian: I learned that methods of testing software usability and accessabilty are constantly evolving and improving. Even if software I
+develop in the future might meet some set of current standards, there's is always room for improvement and I have to be aware of, and open to that. \\
+
+Jackson: Through GenderMag, I realized that a one size its all approach in design can (and likely will) overlook critical usability 
+issues. Incorporating various user perspectives helps to uncover subtle barriers and improves overall system usability. \\
+
+Mark: Personas are an incredibly valuable tool for usability testing. If real users can't be found or are unavailable, putting youself in the
+shoes of different personas is a useful alternative. I'm now aware that even if I develop something solo, I always have the oppourtunity and obligation
+to assess the design with different perspectives. \\
+
+Emily: That understanding different user perspectives is essential. The GenderMag process showed the importance of considering 
+how different backgrounds and cognitive styles impact software interactions. This awareness will drive me to advocate for inclusive 
+design choices in every project. \\
 \end{document}
