Issue #300: Update problem statement doc extras

--- a/docs/ProblemStatementAndGoals/ProblemStatement.tex
+++ b/docs/ProblemStatementAndGoals/ProblemStatement.tex
@@ -23,6 +23,7 @@
 \textbf{Date} & \textbf{Developer(s)} & \textbf{Change}\\
 \midrule
 2024/09/24 & Mark, Ian, Emily, Jackson & Initial Revision\\
+2025/03/26 & Ian & Update extras, \href{https://github.com/emilyperica/ScoreGen/issues/300}{Issue \#300}\\
 \bottomrule
 \end{tabularx}
 \end{table}
@@ -103,8 +104,8 @@ latter topic has been discussed in multiple junior level undergraduate courses a
 known by multiple members of the team or can easily be researched and understood.
 As a result of the expected challenge level, two extras have been chosen:
 \begin{enumerate}
-    \item Design thinking.
-    \item Usability testing.
+    \item GenderMag evaluation.
+    \item User guide.
 \end{enumerate}
 
 \newpage{}
